# pptx-generator

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.en.md  README.md  README.zh-TW.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yml
assets/: example-output.pptx  example-slides.json  example-slides.md
pptx_generator/: __init__.py  __main__.py  generator.py  markdown_parser.py
pptx_generator/assets/: default-template.pptx  example-slides.yaml  prompt-template.md
scripts/: generate_pptx_template.py
